--- a/Proposal/sec/5_team.tex
+++ b/Proposal/sec/5_team.tex
@@ -6,3 +6,10 @@
 \includegraphics[width=0.1\textwidth]{Haochen.png}\\     \textbf{Haochen Ye}\\ \href{https://drive.google.com/file/d/1YOZvJANmngCAai1OxXm28a_7XmKGmpH1/view?usp=sharing}{\underline{Resume Link}}\\
 \includegraphics[width=0.1\textwidth]{Sam.png}\\     \textbf{Sam Aldehayyat}\\ \href{https://drive.google.com/file/d/14jBT5AZ_GzdElLh-0LSXzP7AxgjMu0wa/view?usp=sharing}{\underline{Resume Link}}\\
 \includegraphics[width=0.1\textwidth]{Yuepei.png}\\     \textbf{Yuepei Yu}\\ \href{https://drive.google.com/file/d/1xcBhl6kxY1gQZsCjADVlJvvDVYBJLoSo/view?usp=sharing}{\underline{Resume Link}}\\
+This team had been build with the following fellowship in minds:\\
+1. Liberté, Egalité, Fraternité\\
+2. Diversity and Inclusion\\
+3. Teamwork\\
+4. Respect\\
+5. Integrity\\
+
