--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -29,7 +29,7 @@
 \title{\LaTeX\ Proposal for \confName~}
 %%%%%%%%% AUTHORS - PLEASE UPDATE
 \author{Murtadha Marzouq\\
-Uninversity of North Carolina Charlotte\\
+{\tt\small Graduate Student}\\
 {\tt\small mmarzouq@charlotte.edu}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
@@ -38,19 +38,19 @@ Uninversity of North Carolina Charlotte\\
 % To save space, use either the email address or home page, not both
 \and
 Param Patel\\
-Uninversity of North Carolina Charlotte\\
+{\tt\small Graduate Student}\\
 {\tt\small ppate211@charlotte.edu}
 \and 
 Haochen Ye\\
-Uninversity of North Carolina Charlotte\\
-{\tt\small hye5@charlotte.edu}
+{\tt\small Graduate Student}\\
+{\tt\small \small hye5@charlotte.edu}
 \and
 Sam Aldehayyat\\
-Uninversity of North Carolina Charlotte\\
+{\tt\small Undergraduate Student}\\
 {\tt\small saldehay@charlotte.edu}
 \and
 Yuepei Yu\\
-Uninversity of North Carolina Charlotte\\
+{\tt\small Undergraduate Student}\\
 {\tt\small yyu20@uncc.edu}
 }
 
@@ -77,3 +77,4 @@ Uninversity of North Carolina Charlotte\\
 % \input{sec/X_suppl}
 
 \end{document}
+
