--- a/Proposal/sec/4_method.tex
+++ b/Proposal/sec/4_method.tex
@@ -12,4 +12,15 @@ The model will be trained using the LFW dataset (Partially). The model will be u
 \subsection{Computer Vision Algorithm}
 \label{subsec:Computer Vision Algorithm}
 Using YOLO \cite{YOLO}, a neural network for object detection, we will train a model to recognize faces. The model will be trained using the LFW dataset. The model will be used to recognize the students in the class. The model will be able to recognize the students in the class and log the time they entered and exited the classroom. The model will also be able to identify the number of students in an image and cross-reference it with Canvas's people table (number of students) to provide a percentage of students in the classroom. The percentages will be logged and presented in a graph to provide a visual representation of the attendance in the class.\\
+% Diagram of the system%
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/Diagram-1.png}
+    \caption{Flowchart of the system}
+    \label{fig:flowchart}
+\end{figure}
+
+
+
+
 %-------------------------------------------------------------------------
