--- a/Proposal/sec/1_intro.tex
+++ b/Proposal/sec/1_intro.tex
@@ -1,4 +1,4 @@
 \section{Introduction}
 \label{sec:intro}
 
-Attendance is a vital part of a students success in any course, especially in graduate level education, however enforcing and keeping records of a student's attendance is not always possible because of time and resource. In this project proposal will will lay out a system that will allow students to check in and out of a classroom using facial recognition. The system will be able to identify the student and record the time they entered and exited the classroom. The system will also be able to identify the number of students in an image and cross{-}reference it with Canvas's people table (number of students) to provide a  percentage of students in the classroom. 
+Attendance is a vital part of a students success in any course, especially in graduate level education, however enforcing and keeping records of a student's attendance is not always possible because of time and resource. In this project proposal will will lay out a system that will allow students to check in and out of a classroom using facial recognition. 
