--- a/Proposal/sec/2_problem.tex
+++ b/Proposal/sec/2_problem.tex
@@ -1,5 +1,4 @@
 \section{Problem Statement}
 \label{sec:problem}
-Attendance enforcement and record keeping in the class room is often overlooked because of added time and resources. Additionally, the COVID-19 pandemic has made it difficult to enforce attendance in the classroom. In this project, we will develop a system that will allow students to check in and out of a classroom using facial recognition. The system will be able to identify the student and record the time they entered and exited the classroom. The system will also be able to identify the number of students in an image and cross-reference it with Canvas's people table (number of students) to provide a percentage of students in the classroom.\\
-The system will be able to identify the student and record the time they entered and exited the classroom. The system will also be able to identify the number of students in an image and cross-reference it with Canvas's people table (number of students) to provide a percentage of students in the classroom.\\
+Attendance enforcement and record keeping in the class room is often overlooked because of added time and resources. Additionally, the COVID-19 pandemic has made it difficult to enforce attendance in the classroom. In this project, we will develop a system that will allow students to check in and out of a classroom using face recognition. \\
 %-------------------------------------------------------------------------
