--- a/Proposal/sec/0_abstract.tex
+++ b/Proposal/sec/0_abstract.tex
@@ -1,3 +1,4 @@
 \begin{abstract}
-This Computer Vision project proposal will contain problem statement and importance, plan for data sources, and the computer vision algorithm to be used in this project.
+
+Sam This Computer Vision project proposal will contain problem statement and importance, plan for data sources, and the computer vision algorithm to be used in this project.
 \end{abstract}
