--- a/Final Report/main.bib
+++ b/Final Report/main.bib
@@ -65,8 +65,34 @@
  year = 2014
 }
 
+@article{YOLOpaper1,
+author = {Meo Vincent C. Caya, Miguel Ephraim C. Caringal, \and Khristopher Allen C. Manuel},
+title = {Tongue Biometrics Extraction Based on YOLO Algorithm and CNN Inception},
+doi = {10.1109/UEMCON47517.2019.8992980},
+booktitle = {2021 IEEE 13th International Conference on Humanoid, Nanotechnology, Information Technology, Communication and Control, Environment, and Management (HNICEM)},
+pages = {xxxx},
+year = 2021,
+journal = {IEEE},
+}
 
-
+@article{YOLOpaper2,
+author = {Lina J. Karam \and Tong Zhu},
+title = {Quality labeled faces in the wild (QLFW): a database for studying face recognition in real-world environments},
+doi = {10.1109/UEMCON47517.2019.8992980},
+booktitle = {Human Vision and Electronic Imaging XX},
+pages = {xxxx},
+year = 2015,
+journal = {SPIE},
+}
+@article{YOLOpaper3,
+author = {Tsung-Yi Lin, Michael Maire, Serge Belongie, James Hays, Pietro Perona, Deva Ramanan, Piotr Dollár \and C. Lawrence Zitnick},
+title = {Microsoft COCO: Common Objects in Context},
+doi = {10.1109/UEMCON47517.2019.8992980},
+booktitle = {LNIP,volume 8693},
+pages = {740-755},
+year = 2021,
+journal = {Computer Vision - ECCV 2014},
+}
 @article{YOLO,
 author = {Misbah Ahmad, Imran Ahmed, \and Awais Adnan},
 title = {Overhead View Person Detection Using YOLO},
@@ -77,6 +103,35 @@ year = 2019,
 journal = {IEEE},
 }
 
+@article{YOLO4,
+author = {Chuyi Li \and Lulu Li \and Yifei Geng \and Hongliang Jiang and Meng Cheng and Bo Zhang \and Zaidan Ke \and Xiaoming Xu \and Xiangxiang Chu.},
+title = {YOLOv6 v3.0: A Full-Scale Reloading. In 2023 4th International Conference on Intelligent Computing and Human-Computer Interaction},
+doi = {(ICHCI). IEEE},
+booktitle = {ICHCI, IEEE},
+pages = {xxx-xxx},
+year = 2023,
+journal = {IEEE},
+}
+
+@article{YOLO5,
+author = {Yuan, Y. \and Chen, X. \and Wang, J.},
+title = {Object-Contextual Representations for Semantic Segmentation. In Computer Vision},
+doi = {ECCV IEEE},
+booktitle = {ECCV},
+pages = {173-190},
+year = 2020,
+journal = {ECCV},
+}
+
+@article{YOLO6,
+author = {Godil, A., \and Shackleford, W.,\and Shneier, M., \and Bostelman, R., \and Hong, T.},
+title = {Performance Metrics for Evaluating Object and Human Detection and Tracking Systems. National Institute of Standards and Technology},
+doi = {ECCV IEEE},
+booktitle = {ECCV},
+pages = {173-190},
+year = 2014,
+journal = {ECCV},
+}
 
 
 @misc{Authors14b,
