--- a/Final Report/main.tex
+++ b/Final Report/main.tex
@@ -68,6 +68,9 @@ Yuepei Yu\\
 \input{sec/3_data_analysis}
 \input{sec/4_method}
 \input{sec/5_team}
+\input{sec/6_results}
+\input{sec/7_conclusion}
+
 {
     \small
     \bibliographystyle{ieeenat_fullname}
