--- a/Final Report/sec/6_results.tex
+++ b/Final Report/sec/6_results.tex
@@ -2,6 +2,18 @@
 \label{sec:results}
 
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/Before.png}
+    \caption{Before}
+    \label{fig:before}
+\end{figure}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/After.png}
+    \caption{After}
+    \label{fig:after}
+\end{figure}
 
 %-------------------------------------------------------------------------
