updating abstract section

--- a/Final Report/sec/0_abstract.tex
+++ b/Final Report/sec/0_abstract.tex
@@ -1,4 +1,5 @@
 \begin{abstract}
+In educational settings, assessing classroom occupancy is integral for attendance keeping purposes. This project aims to develop a sophisticated computer vision system aimed at automating the attendance process by accurately detecting and recording the presence of students within images taken in a classroom by an instructor. We will utilize well-known datasets and methods for examining the images which will be introduced further along in the paper. It will contain a detailed explanation of the problem, planning the solution, implementing it and the lessons learnt throughout this process.
 
-Sam This Computer Vision project proposal will contain problem statement and importance, plan for data sources, and the computer vision algorithm to be used in this project.
+Keywords: Computer Vision, Object Detection, Image Processing, Student Counting, Classroom Management.
 \end{abstract}
