--- a/Final Report/sec/1_intro.tex
+++ b/Final Report/sec/1_intro.tex
@@ -1,4 +1,4 @@
 \section{Introduction}
 \label{sec:intro}
 
-Attendance is a vital part of a students success in any course, especially in graduate level education, however enforcing and keeping records of a student's attendance is not always possible because of time and resource. In this project proposal will will lay out a system that will allow students to check in and out of a classroom using facial recognition. 
+Attendance is an indispensable metric for a student's academic journey, where consistent participation correlates with academic success. The process of monitoring and maintaining attendance records presents significant challenges, which mostly originates from constraints in time and resources. By harnessing the benefits of computer vision, this project addresses the problem of automating the attendance-taking process in classrooms using a tool that is at every teacher’s disposal, their cell phone camera.
