expanded problem statement

--- a/Final Report/sec/2_problem.tex
+++ b/Final Report/sec/2_problem.tex
@@ -1,4 +1,3 @@
 \section{Problem Statement}
 \label{sec:problem}
-Attendance enforcement and record keeping in the class room is often overlooked because of added time and resources. Additionally, the COVID-19 pandemic has made it difficult to enforce attendance in the classroom. In this project, we will develop a system that will allow students to check in and out of a classroom using face recognition. \\
-%-------------------------------------------------------------------------
+Attendance enforcement and record keeping in the classroom is often overlooked because of added time and resources. Attendance is often used as a certain percentage of a student’s grade to entice them into showing up to a classroom, when it should be an innate desire to attend class to further their knowledge. Secondly, classes are often oversaturated with the number of students for one subject so keeping track of names and their attendance records is hard for a single instructor. Resorting to methods like iClicker remotes and in-person quizzes further encroaches upon valuable class time that should ideally be dedicated to teaching. The COVID-19 pandemic has also made it difficult to enforce attendance in the classroom due an overdependence on ‘fall-back’ virtual learning platforms like Zoom and Canvas. Keeping in mind all of these facets, we aim to simplify and modernize the experience for both the instructor and students.
