--- a/Final Report/sec/7_conclusion.tex
+++ b/Final Report/sec/7_conclusion.tex
@@ -1,7 +1,12 @@
 \section{Conclusion}
 \label{sec:conclusion}
 
-
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/train.png}
+    \caption{training data}
+    \label{fig:data}
+\end{figure}
 
 
 %-------------------------------------------------------------------------
