--- a/Final Report/sec/3_data.tex
+++ b/Final Report/sec/3_data.tex
@@ -1,9 +1,9 @@
 \section{Dataset}
-To build a reliable image recognition system that can help identify the number of students, having a high-quality and comprehensive database is of paramount importance. The dataset serves as the foundational resource for training and testing the image recognition system, and its quantity, quality, and diversity are all crucial factors. Constructing a high-quality dataset primarily relies on several key steps, each of which plays a critical role in training and developing an accurate and reliable image recognition system. These steps include data collection, data annotation, data preprocessing, and dataset partitioning for evaluation and deployment.\\
+The first step to building an image recognition system that will help identify the number of students, we need to start by having a high-quality set of images. The dataset serves as the foundation for training and testing the image recognition system, and the quantity, quality, and diversity of the images in this dataset are all also factors that affect it's performance. Constructing a high-quality dataset primarily includes data collection, data annotation, data preprocessing, and dataset partitioning for evaluation and deployment.\\
 \label{sec:method}
 \subsection{Data Collection}
 \label{subsec:method}
-To ensure we have enough data, we've collected information from various sources. Initially, we started by acquiring a portion of publicly available data online, specifically leveraging the \href{https://cocodataset.org/#home}{\underline{Microsoft COCO(COCO Dataset))}}. This dataset contains a wide array of images featuring individuals from various backgrounds, orientations, ethnicities, and settings. In our dataset, we've incorporated a subset of this COCO data, which adds diversity and improves the accuracy of our image recognition system. Beyond these open-source databases, our dataset also incorporates data from other origins. For instance, in each class section, we've taken a set of photographs from different angles with the consent of our classmates. These photos hold significant importance for the practical application of our system, as they closely mirror the real-world environment where our recognition system will be put into use. To further enrich our dataset's diversity, we've collaborated with other teams working on similar projects and obtained a portion of shared data.\\
+To ensure we have enough data, we've collected information from various sources. Initially, we started by acquiring a portion of publicly available data online, specifically leveraging the \href{https://cocodataset.org/#home}{\underline{Microsoft COCO(COCO Dataset))}}. This dataset contains a wide array of images featuring individuals from various backgrounds, orientations, ethnicities, and settings. We used this specific dataset because it is quite well-knnown and has numerous sections which are applicable to our specific use-case such as the person classier. Beyond that open-source database, our validation images also incorporate our individual student experiences. For instance, in each class that we are in, we've taken a set of photographs from different angles with the consent of our classmates. These photos hold significant importance for the practical application of our system, as they closely mirror the real-world environment (classrooms) where our recognition system will be put into use. To further enrich our dataset's diversity, we've collaborated with other teams working on similar projects and obtained a portion of shared data.\\
 \label{sec:method}
 \subsection{Data Labeling}
 \label{subsec:method}
@@ -11,7 +11,7 @@ To achieve clearer identification of objects within images, especially the targe
 \label{sec:method}
 \subsection{Data Preprocessing}
 \label{subsec:method}
-Thoroughly cleaning and preparing the data is another crucial part of creating our dataset. This step is essential to make sure that all the images in our dataset have consistent quality and can be effectively used for both training and testing our system. During this phase, we carry out various tasks on the data, including data we obtained from the COCO dataset and our own captured data. In this stage, we do things like resizing images to a uniform size, reducing any noise in the pictures, standardizing the brightness and contrast in the images, and aligning facial features to improve accuracy. Data preprocessing not only improves the overall quality of our dataset but also makes the training process smoother by providing the model with standardized inputs. This standardization is crucial to ensure that our image recognition system can perform well under different lighting conditions, facial expressions, and variations in image quality, allowing it to work effectively in various real-world situations.\\
+Thoroughly preparing the data is another part of preparing our dataset. This step is essential to make sure that all the images in our dataset have consistent quality and can be effectively used for both training and testing our system. During this phase, we carry out various tasks on the data, including data we obtained from the COCO dataset and our own captured data. In this stage, we resized images to a uniform size, removed noise, standardized the brightness and contrast in the images, and aligned facial features to improve accuracy. Preprocessing the data not only improved the overall quality of our dataset but also made the training process smoother by providing the model with standardized inputs. This standardization is to ensure that our image recognition system can perform well under different lighting conditions, facial expressions, and variations in image quality.\\
 \label{sec:method}
 \subsection{Data Partitioning}
 \label{subsec:method}
