--- a/Final Report/sec/6_results.tex
+++ b/Final Report/sec/6_results.tex
@@ -11,6 +11,13 @@ We
     \label{fig:data}
 \end{figure}
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.5\textwidth]{images/QR.png}
+    \caption{QR code for Demo}
+    \label{fig:data}
+\end{figure}
+
 Prior to loading any images, we implemented a pre-processing step to stitch images to ensure that all the images are the same size. The images were stitched together using the OpenCV. \\
 \begin{figure}[h]
     \centering
