--- a/Final Report/sec/7_conclusion.tex
+++ b/Final Report/sec/7_conclusion.tex
@@ -1,12 +1,5 @@
 \section{Conclusion}
 \label{sec:conclusion}
-
-\begin{figure}[h]
-    \centering
-    \includegraphics[width=0.5\textwidth]{images/train.png}
-    \caption{training data}
-    \label{fig:data}
-\end{figure}
-
-
+In conclusion, our project embarked on an exploration of different computer models and an ambitious application of it in our own environment by applying the scientific method. Our endeavor wasn't just confined to theoretical exploration; it entailed hands-on research and data gathering, which gave us a deeper understanding of these models' nuances. The meticulous collection and curation of our own dataset from our own classrooms bolstered our ability to comprehensively evaluate and fine-tune the model and offered valuable insights.\\
+There are numerous promising avenues for future work onour project. Integrating individual accounts for teachers to establish class sections would offer enhanced organization and tailored experiences. Furthermore, integration with Canvas to extract student enrollment counts would be a crucial step toward seamless existence with preexisting educational resources at our university. A history log could detail attendance percentages and graphical representations as a visual tool for assessment and intervention. These future enhancements hold the potential to revolutionize classroom attendance taking and facilitate a more engaged learning environment.
 %-------------------------------------------------------------------------
