--- a/Final Report/sec/4_method.tex
+++ b/Final Report/sec/4_method.tex
@@ -2,9 +2,9 @@
 \label{sec:method}
 \subsection{Methodology}
 \label{subsec:method}
-1. Research datasets to use
-2. Research models to use
-3. Selected COCO Dataset and YOLOv6 model
+1. Research datasets to use \cite{YOLOpaper2}
+2. Research models to use 
+3. Selected COCO Dataset and YOLOv6 \cite{YOLOpaper1} model
 4. Train that model to recognize humans in an image\\
 5. Test the trained model to recognize the students in the class from images taken by group members\\
 
