--- a/Final Report/sec/3_data.tex
+++ b/Final Report/sec/3_data.tex
@@ -3,7 +3,7 @@ The first step to building an image recognition system that will help identify t
 \label{sec:method}
 \subsection{Data Collection}
 \label{subsec:method}
-To ensure we have enough data, we've collected information from various sources. Initially, we started by acquiring a portion of publicly available data online, specifically leveraging the \href{https://cocodataset.org/#home}{\underline{Microsoft COCO(COCO Dataset))}} \cite{YOLOpaper3}. This dataset contains a wide array of images featuring individuals from various backgrounds, orientations, ethnicities, and settings. We used this specific dataset because it is quite well-knnown and has numerous sections which are applicable to our specific use-case such as the person classier. Beyond that open-source database, our validation images also incorporate our individual student experiences. For instance, in each class that we are in, we've taken a set of photographs from different angles with the consent of our classmates. These photos hold significant importance for the practical application of our system, as they closely mirror the real-world environment (classrooms) where our recognition system will be put into use. To further enrich our dataset's diversity, we've collaborated with other teams working on similar projects and obtained a portion of shared data.\\
+To ensure we have enough data, we've collected information from various sources. Initially, we started by acquiring a portion of publicly available data online, specifically leveraging the \href{https://cocodataset.org/#home}{\underline{Microsoft COCO(COCO Dataset))}} [3]. This dataset contains a wide array of images featuring individuals from various backgrounds, orientations, ethnicities, and settings. We used this specific dataset because it is quite well-knnown and has numerous sections which are applicable to our specific use-case such as the person classier. Beyond that open-source database, our validation images also incorporate our individual student experiences. For instance, in each class that we are in, we've taken a set of photographs from different angles with the consent of our classmates. These photos hold significant importance for the practical application of our system, as they closely mirror the real-world environment (classrooms) where our recognition system will be put into use. To further enrich our dataset's diversity, we've collaborated with other teams working on similar projects and obtained a portion of shared data.\\
 \label{sec:method}
 \subsection{Data Labeling}
 \label{subsec:method}
